--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,7 +8,7 @@ html {
 body {
   width: 100vw;
   height: 100vh;
-  background-color: black;
+  background-color: grey;
   display: grid;
   place-items: center;
 }
@@ -19,10 +19,15 @@ main {
     span {
       width: 100px;
       height: 100px;
+      background-color: white;
       border: 2px grey solid;
       color: grey;
       display: grid;
       place-items: center;
+
+      &.alive {
+        background-color: black;
+      }
     }
   }
 }
