--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,8 +6,8 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   background-color: grey;
   display: flex;
   flex-direction: column;
